# mkv-mp4-with-hardsub

./: .gitignore  PR_MESSAGE.md  README.md  config.yaml  main.py  pyproject.toml
debug/: README.md  test_thai_fonts.py
docs/: CONFIG_MANAGER.md  ffmpeg-validation-and-scanning.md
docs/plans/: project-plan.md
scripts/: __init__.py  config_manager.py  process_mkv_files.py  scan_mkv_files.py  validate_ffmpeg.py
src/: __init__.py  config.py  converter.py  logger.py  utils.py
tests/: __init__.py  test_converter.py
